fixed java5 code